Bug 218235 - AudioContext.suspend() should not reject promise when audio session is interrupted
Summary: AudioContext.suspend() should not reject promise when audio session is interr...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks: 217606
  Show dependency treegraph
 
Reported: 2020-10-27 08:21 PDT by Chris Dumez
Modified: 2020-10-27 08:27 PDT (History)
7 users (show)

See Also:


Attachments
Patch (6.80 KB, patch)
2020-10-27 08:24 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2020-10-27 08:21:08 PDT
AudioContext.suspend() should not reject promise when audio session is interrupted. Being "interrupted" is an internal WebKit concept and rejecting the promise here is confusing to Web developers.
Comment 1 Chris Dumez 2020-10-27 08:24:54 PDT
Created attachment 412423 [details]
Patch
Comment 2 Chris Dumez 2020-10-27 08:26:09 PDT
Comment on attachment 412423 [details]
Patch

Clearing flags on attachment: 412423

Committed r269039: <https://trac.webkit.org/changeset/269039>
Comment 3 Chris Dumez 2020-10-27 08:26:11 PDT
All reviewed patches have been landed.  Closing bug.
Comment 4 Radar WebKit Bug Importer 2020-10-27 08:27:18 PDT
<rdar://problem/70722668>