AudioContext.suspend() should not reject promise when audio session is interrupted https://bugs.webkit.org/show_bug.cgi?id=218235

Reviewed by Darin Adler.

Source/WebCore:

AudioContext.suspend() should not reject promise when audio session is interrupted. Being
"interrupted" is an internal WebKit concept and rejecting the promise here is confusing
to Web developers.

We now no longer throw when AudioContext.suspend() is called while interrupted. Instead,
we set the 'wasSuspendedByJavascript' flag and register a state change listener to resolve
the promise when the state changes to "suspended".

When the interruption ends, AudioContext::mayResumePlayback() gets called with
shouldResume=false, causing us to update the state from "interrupted" to "suspended",
which resolves the suspend promise.

Test: webaudio/suspend-context-while-interrupted.html

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::suspendRendering):

LayoutTests:

Add layout test coverage.

* webaudio/suspend-context-while-interrupted-expected.txt: Added.
* webaudio/suspend-context-while-interrupted.html: Added.

Canonical link: https://commits.webkit.org/230930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269039 268f45cc-cd09-0410-ab3c-d52691b4dbfc